[package]
edition = "2021"
name = "fmmnbot"
version = "0.1.0"

[dependencies]
dotenv = "0.15.0"
serde = {version = "1.0.188", features = ["derive"]}
serenity = {version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"]}
surrealdb = {version = "1.0.0", features = ["kv-speedb"]}
tokio = {version = "1.32.0", features = ["macros", "rt-multi-thread"]}
